better lets work on mobile view, but need to fix the desktop too

--- a/public/static/nav_style.css
+++ b/public/static/nav_style.css
@@ -80,7 +80,9 @@
     padding-right: 20px
 }
 
-.wooden-a{
+
+
+.wooden-a {
     padding: 25px 45px;
     text-transform: uppercase;
     font-size: 14px;
@@ -91,10 +93,22 @@
     position: relative;
     padding-right: 70px;
     color: white;
-    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='7.41' height='12' viewBox='0 0 7.41 12'%3E%3Cpath d='M10,6,8.59,7.41,13.17,12,8.59,16.59,10,18l6-6Z' transform='translate(-8.59 -6)' fill='%23fff'/%3E%3C/svg%3E");
-  background-repeat: no-repeat;
-  background-position: right 24px center; */
 }
+
+@media only screen and (max-width: 600px) {
+.wooden-a {
+    padding: 20px 40px;
+    text-transform: uppercase;
+    font-size: 14px;
+    letter-spacing: 2px;
+    border-radius: 45px;
+    background-image: url('../static/img/woods/wood1.jpeg');
+    margin-top: 2em;
+    position: relative;
+    padding-right: 70px;
+    color: white;
+}
+}   
 
 /* arrow-right-purple.svg */
 
@@ -163,4 +177,50 @@
           min-height: 400px;
         }
       }
+   
+
+    .letswork {
+    /* min-height: 600px; */
+    height: 600px;
+    
+    }
+
+    @media only screen and (max-width: 600px) {
+    .letswork {
+        height: 450px;
+        padding-left:10px;
+        /* height: 48px;
+        margin-top: -26px; */
+        /* min-height: 400px; */
+    }
+    }
+
+
+    .letswork-inner {
+        /* min-height: 600px; */
+        }
+    
+        @media only screen and (max-width: 600px) {
+        .letswork-inner {
+            /* height: 48px;
+            margin-top: -26px; */
+            /* min-height: 400px; */
+            height: 500px;
+        }
+        }
+
+
+
+.viewOpening {
+
+    }
+
+    @media only screen and (max-width: 600px) {
+    .viewOpening {
+        /* height: 48px;
+        margin-top: -26px; */
+        /* min-height: 400px; */
+
+    }
+    }        
     
